--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "omnipay/paypal",
+    "name": "knit-pay/omnipay-paypal",
     "type": "library",
     "description": "PayPal gateway for Omnipay payment processing library",
     "keywords": [
@@ -15,12 +15,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Adrian Macneil",
-            "email": "adrian@adrianmacneil.com"
-        },
-        {
-            "name": "Omnipay Contributors",
-            "homepage": "https://github.com/thephpleague/omnipay-paypal/contributors"
+            "name": "Knit Pay",
+            "homepage": "https://github.com/knit-pay/omnipay-paypal"
         }
     ],
     "autoload": {
