--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,9 @@
         "omnipay/tests": "^4.1.2",
         "squizlabs/php_codesniffer": "^3"
     },
+    "replace" : {
+        "omnipay/paypal": "^3.0"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
